# rules_euler

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  euler.bzl  rules_test.bzl  rules_test.sh
.github/workflows/: bazel.yml
common/: BUILD.bazel  common.sh
examine/: BUILD.bazel  examine.sh
examples/: .bazelrc  BUILD.bazel  README.md  WORKSPACE  file_example.hs  haskell_solution.hs  haskell_solution2.hs  problem_2.py  python_solution.py  python_solution2.py
stub/: BUILD.bazel  stub.sh
templates/: BUILD.bazel  euler.sh.tpl
