# Expose Licenses and Readme for external usage.
package(default_visibility = ["//visibility:public"])

# Expose testing for these rules.
load(":euler.bzl", "euler_test")
load(":rules_test.bzl", "rules_test_suite")

# The licenses API is deprecated in Bazel anyway, but putting this here to
# indicate that following the license from Project Euler, this must be used
# non-commercially.
licenses(["notice"])

genrule(
    name = "external_euler",
    srcs = ["@pocket_euler//:files"],
    outs = ["files"],
    output_to_bindir = 1,
    cmd = "mv external/pocket_euler/files $@ && ln -s $@ .",
)

# Expose license for external usage through bazel.
exports_files([
    "LICENSE",
])

# Call a macro that defines targets that perform the tests at analysis time,
# and that can be executed with "bazel test" to return the result.
rules_test_suite(name = "rules_test")
